<resources>
    <string name="app_name">Story App</string>
    <string name="welcome">Selamat datang di StoryApp</string>
    <string name="welcome_login"> Silahkan login</string>
    <string name="logo">logo</string>
    <string name="input_email">Masukkan Email</string>
    <string name="invalid_email">Format Tidak Valid</string>
    <string name="input_pass">Masukkan Password</string>
    <string name="invalid_password">Password Minimal 8 Karakter</string>
    <string name="dont_have_account">Belum Punya Akun?</string>
    <string name="already_have_an_account">Sudah Punya Akun?</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="title_registrasi">Silahkan Lengkapi Data Dibawah Ini</string>
    <string name="sign_up">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="logout">Keluar</string>
    <string name="name_required">Nama Wajib Diisi</string>
    <string name="check_input">Cek Masukkan</string>
    <string name="name">Nama</string>
    <string name="preview">Pratinjau</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="add_story">Tambah Story</string>
    <string name="setting">Pengaturan</string>
    <string name="description">Deskripsi</string>
    <string name="upload">Unggah</string>
    <string name="input_image_first">Masukkan Gambar!</string>
    <string name="didnt_get_permission">Tidak Medapatkan Izin</string>
    <string name="retry">Coba lagi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="story_from">Story form :</string>
    <string name="maps">Ini Maps</string>
    <string name="upload_my_location">Unggah Lokasi Anda</string>
</resources>